# DEF-rfpar

./: .env.serve  .env.serve.example  AGENTS.md  ASSETS.md  CLAUDE.md  Dockerfile.serve  NEXT_STEPS.md  PRD.md  TRAINING_REPORT.md  anima_module.yaml  docker-compose.serve.yml  pyproject.toml
benchmarks/: README.md  rfpar_benchmark_spec.md
configs/: debug.toml  default.toml  paper.toml  paper_cls_full.toml  paper_det_coco5k.toml  paper_detection.toml
docker/: Dockerfile.serve
docs/: production_runbook.md
kernels/: README.md
kernels/cuda/: rfpar_ops.cu  setup.py
prds/: PRD-01-foundation.md  PRD-02-core-model.md  PRD-03-inference.md  PRD-04-evaluation.md  PRD-05-api-docker.md  PRD-06-ros2-integration.md  PRD-07-production.md  README.md
reports/: BENCHMARK_REPORT.md  PARITY_REPORT.md  TRAINING_REPORT.md
repositories/RFPAR/: Adversarial_RL_simple.py  Environment.py  LICENSE  README.md  config.py  main_cls.py  main_od.py  utils.py
ros2/: README.md  rfpar_node.py
ros2/launch/: rfpar.launch.py
src/anima_rfpar/: __init__.py  agent.py  attack.py  benchmarks.py  cli.py  config.py  cuda_ops.py  (+8 more)
tasks/: INDEX.md  PRD-0101.md  PRD-0102.md  PRD-0103.md  PRD-0104.md  PRD-0201.md  PRD-0202.md  PRD-0203.md  PRD-0301.md  PRD-0302.md  PRD-0303.md  PRD-0401.md  PRD-0402.md  PRD-0403.md  PRD-0501.md  PRD-0502.md  PRD-0503.md  PRD-0601.md  PRD-0602.md  PRD-0603.md  PRD-0701.md  PRD-0702.md  PRD-0703.md  README.md
tests/: test_attack_smoke.py  test_benchmark_schema.py  test_cli_contract.py  test_config.py  test_data.py  test_pipeline_contract.py  test_service_contract.py
(+5 files in other folders)
